# launchbox-utils

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  launchbox_utils.example.ini  launchbox_utils.py  launchbox_utils.spec  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: nightly-release.yml  test.yml
docs/: roadmap-workflow.md
docs/decisions/: 0001-launchbox-mcp-product-direction.md  README.md
docs/plans/: p0-conservative-nested-mixed-dedupe.md  p0-mutation-core-fail-closed-invariants.md  p0-safe-xml-round-trip.md  p0-trusted-platform-xml.md  p0-windows-safety-check.md
launchbox_tools/: __init__.py  cli.py  config.py  diagnostics.py  models.py  mutation_lock.py  mutation_manifest.py  operation_lifecycle.py  paths.py  runtime_checks.py  safe_write.py  xml_checkpoint_io.py  xml_repository.py
launchbox_tools/gui/: __init__.py  app.py  translations.py
launchbox_tools/operations/: __init__.py  audit.py  dedupe_additional_apps.py  path_replacement.py
launchbox_tools/reports/: __init__.py  audit_reports.py  (+2 more)
scripts/: build_exe.ps1
test/: __init__.py  support.py  test_audit.py  test_cli.py  test_config.py  test_dedupe_additional_apps.py  test_fail_closed_invariants.py  test_gui.py  test_launchbox_utils.py  test_mutation_lock.py  test_mutation_manifest.py  test_operation_lifecycle.py  test_path_replacement.py  test_paths.py  test_reports.py  test_runtime_checks.py  test_runtime_checks_windows_integration.py  test_safe_write.py  test_xml_repository.py  test_xml_round_trip.py
(+7 files in other folders)
